--- a/docs/general-modeling-framework.Rmd
+++ b/docs/general-modeling-framework.Rmd
@@ -13,7 +13,7 @@ Suppose utility can be expressed in terms of a vector ($\mathbf{\tilde x_{itj}}$
 U_{itj} = V(\mathbf{\tilde x_{itj}}, \mathbf{z_i})+ \epsilon_{ij}
 \end{equation}
 
-For HIU $i$, the choice of insurance $y_{it}$ is based on maximizing utility across the $J$ alternatives at time t:
+For HIU $i$, the choice of insurance $y_{it}$ is based on maximizing utility across the $J$ alternatives at time $t$
 
 \[
 y_{it} = {\arg \max}_j [U_{itj}, j = 1, \dots, J]
@@ -117,140 +117,9 @@ The utility shifter in the above equation is designed to either increase or decr
 
 Each indiviual in the model faces a set of insurance options in their choice set (e.g., based on whether an offer of emloyment-based coverage is available to them, whether they are eligible for public insurance, etc.). These utilities are then fed through a nested logit framework to derive coverage take-up probabilities. Estimates of $\mathbf{c}_{t_0+1}(0)$ are based on aggregating these choice probabilities under the baseline scenario, and estimates of $\mathbf{c}_{t_0+1}(1)$ are based on aggregating choice probabilities under the modeled reform. 
 
-## Example: Modeling Full Expansion of Medicaid Under the ACA
 
-The set of parameters encompassed by $\mathbf{c}_{t_0}$, $\mathbf{R(0)}$, and $\mathbf{R(1)}$ are sufficient statistics for modeling the impact of potential reforms to US health insurance markets. Critically, these parameters could be generated based on a microsimulation model, or they could be derived simply from reduced form estimates of the relevant quantities of interest. 
+<!-- # Link to Existing Microsimulation Approaches -->
 
-In this section, we provide a proof of concept of this reduced form approach by demonstrating how reduced-form evidence on coverage take-up under the ACA's state-level Medicaid expansion can be used to generate projections of the cost and coverage impacts of full expansion in all 50 states. 
+<!-- ## Utility Maximization Models -->
+<!-- <!-- https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2965891/ --> -->
 
-
-
-
-
-<!-- Again, all that is needed to model coverage changes is the baseline (ex ante) occupancy vector $\mathbf{c_{t=0}}$ and the transition probability matrices under the status quo and under reform. These quantities are often modeled at the choice unit level (i.e., all quantities above would be subscribed by $i$) and then aggregated to obtain population-level estimates. But in principle reduced form estimates of $\mathbf{\hat R}(1)$ and $\mathbf{\hat R}(0)$ could also be used.  -->
-
-
-
-
-
-
-
-
-<!-- ## Linkage to Utility-Maximization Based Microsimulation Models -->
-
-<!-- In addition to providing a set of sufficient statistics for modeling coverage changes, the transition proabilities defined above provide a critical shared crossing point between different approaches to ex ante policy evaluation. It is easiest to see this by first starting with microsimulation models based on utility maximization, such as used by the CBO and by the RAND Corporation.  -->
-
-<!-- ### Congressional Budget Office Model  -->
-
-
-
-<!-- The baseline occupancy vector and  That is, once we know these probabilities and how they change under a given reform option, we can simulate the impact on the overall coverage distribution in the population. By attaching costs to population movements among insurance types, we can simulate the cost impact to the government. And finally, as we show below, social welfare weights can also be attached to population movements. These weights can then be aggregated and compared across reform alternatives to make comparative evaluations of policy options.  -->
-
-
-
-# Scratch
-
-
-<!-- We define $r_{ikm}$ as the probability of transitioning from choice $k$ to choice $m$.  These transition probabilities can then be summarized in a $J \times J$ transition probability matrix $T_{i}$ -->
-
-
-
-
-
-
-<!-- Bonin and Schneider (2006) derive an analytical representation of $P_i(k|m)$, or the transition probability from the initial state $m$ to an alternative state $k$ for an individual sample unit. The analytic form for these transtion probabilities is given by: -->
-
-<!-- \[ -->
-<!-- \begin{aligned} -->
-<!-- P(k|m) = \bigg ( \sum_j \exp(\hat U_{jm}) \bigg ) \times \sum_{r=1}^{J-1}I(\Delta_{mk} <\Delta_{r-1})\frac{\exp(\hat U_{km})}{\exp(\hat U_{km})+\eta_r} \\  -->
-<!-- \times \bigg( \frac{1}{1+\exp(\Delta_r-\Delta_{mk})(\exp(\hat U_{km}) + \eta_r)} -  -->
-<!-- \frac{1}{1 + \exp(\Delta_{r-1}-\Delta_{mk})(\exp(\hat U_{mk})+\eta_r)+\theta_r}\bigg ) -->
-<!-- \end{aligned} -->
-<!-- \] -->
-
-
-# Health Reform Modeling as a Discrete Time Markov Process
-
-This section outlines a simple discrete time markov model for health insurance coverage in the U.S. population. We begin by defining an ex ante occupancy vector $\mathbf{p_{exa}}$ that summarizes the fraction of the population in each major health insurance type (employer-sponsored insurance, other private insurance, public insurance, and uninsured) in the pre-reform period.
-
-\[
-\mathbf{p_{exa}}=
-\left(
-\begin{array}{c}
-p_{exa,esi}\\
-p_{exa,pri}\\
-p_{exa,pub}\\
-p_{exa,unin}
-\end{array}
-\right) 
-\]
-where $p_{exa,k}$ is the fraction of the population in each insurance category $k$ in the ex ante period.
-
-Now define the transition probability matrix:
-
-\[
-\mathbf{R} =  [r_{k,j}] =   
-\begin{pmatrix}
-      r_{esi,esi} & r_{esi,pri} & r_{esi,pub} & r_{esi,unin}  \\
-       r_{pri,esi} & r_{pri,pri} & r_{pri,pub} & r_{pri,unin}  \\
-        r_{pub,esi} & r_{pub,pri} & r_{pub,pub} & r_{pub,unin}  \\
-         r_{unin,esi} & r_{unin,pri} & r_{unin,pub} & r_{unin,unin}  
-    \end{pmatrix}
-\]
-where $r_{k,j}$ is the probability of transitioning from ex ante category $k$ to ex post category $j$.
-
-Finally, we can define an ex post occupancy vector:
-
-\[
-\mathbf{p_{exp}}=
-\left(
-\begin{array}{c}
-p_{exp,esi}\\
-p_{exp,pri}\\
-p_{exp,pub}\\
-p_{exp,unin}
-\end{array}
-\right) 
-\]
-
-Basic matrix algebra links the two occupancy vectors as follows: 
-
-\[
-\begin{aligned}
-    \begin{pmatrix}
-p_{exa,esi}\\
-p_{exa,pri}\\
-p_{exa,pub}\\
-p_{exa,unin} \\
-    \end{pmatrix}'
-        \cdot
-    \begin{pmatrix}
-      r_{esi,esi} & r_{esi,pri} & r_{esi,pub} & r_{esi,unin}  \\
-       r_{pri,esi} & r_{pri,pri} & r_{pri,pub} & r_{pri,unin}  \\
-        r_{pub,esi} & r_{pub,pri} & r_{pub,pub} & r_{pub,unin}  \\
-         r_{unin,esi} & r_{unin,pri} & r_{unin,pub} & r_{unin,unin} 
-    \end{pmatrix}
-    &=&
-    \begin{pmatrix}
-p_{exp,esi}\\
-p_{exp,pri}\\
-p_{exp,pub}\\
-p_{exp,unin} \\
-    \end{pmatrix}'
-  \end{aligned}
-\]
-
-In the equation above, the set of transition probabilities $r_{k,j}$ can be considered sufficient statistics for evaluating the impact of a policy change on health insurance coverage in the population. That is, once we know these probabilities and how they change under a given reform option, we can simulate the impact on the overall coverage distribution in the population. By attaching costs to population movements among insurance types, we can simulate the cost impact to the government. And finally, as we show below, social welfare weights can also be attached to population movements. These weights can then be aggregated and compared across reform alternatives to make comparative evaluations of policy options. 
-
-
-# Link to Existing Microsimulation Approaches
-
-## Utility Maximization Models
-<!-- https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2965891/ -->
-
-
-
-
-
-
-## Elasticity 
