--- a/R/02_replicate-finkelstein-shepard-hendren.Rmd
+++ b/R/02_replicate-finkelstein-shepard-hendren.Rmd
@@ -202,6 +202,9 @@ df_wtp_and_costs <-
   ) %>% 
   mutate(iteration = "0")
 
+df_wtp_and_costs %>% 
+   write_rds(here("./output/demand-estimates/01_wtp-and-cost.rds"))
+
 df_wtp_and_costs_data <- 
   fit_wtp_and_costs(
     coef_wtp_l = fit_all$coef,
@@ -274,9 +277,15 @@ df_validation_uncert <-
 p2 <- 
   p + 
   geom_point(data = df_validation_uncert %>% filter(fpl_group=="fpl150"),alpha = 0.05)  +
-    geom_point(data = df_validation %>% filter(fpl_group=="fpl150"),colour = "black",pch = 3) 
-direct.label(p2)
+    geom_point(data = df_validation %>% filter(fpl_group=="fpl150"),colour = "black",pch = 3)  + 
+  theme(text = element_text(family = "Gill Sans"),
+        plot.title = element_text(family = "Gill Sans", face = "plain"),
+        plot.background = element_blank()) + 
+  geom_dl(aes(label = key), method = list("last.polygons",cex =0.9,fontfamily = "Gill Sans"))  + 
+  scale_x_continuous(limits = c(0,1.3),breaks = seq(0,1,0.2)) + 
+  theme(legend.position="none")
 
+#p2
 ```
 \newpage 
 ```{r}
@@ -313,7 +322,7 @@ df_validation %>%
 
 
 
-```{r}
+```{r, eval = TRUE}
 # get_mvpf_subsidy(wtp = .x$wtp, cost = .x$cost, )
 
 fn_uncomp <- function(cost, uninsured_oop_share , phi ) {
@@ -400,22 +409,25 @@ sdf_mvpf_replication <-
     bind_rows(mvpf_lowinc1) %>% 
     bind_rows(mvpf_lowinc0_5) 
 
-df_mvpf_replication %>% 
-  ggplot( aes(x = scenario,fill = s)) + 
-  scale_x_discrete(limits = rev(levels(df_mvpf_replication$scenario ))) + 
-  geom_col(data = df_mvpf_replication  %>% filter(iteration == 0), aes(y = mvpf),position = "dodge") + 
-  ggthemes::theme_clean() + 
-  geom_hline(aes(yintercept = 0.9),lty=2) + 
-  geom_hline(aes(yintercept = 0.2),lty=2) +
-  scale_y_continuous(limits = c(0,1.5), breaks = seq(0,1.5,0.25)) + 
-  geom_text(data = df_mvpf_replication  %>% filter(iteration == 0),
-            aes(y = mvpf,label = round(mvpf,2)), position = position_dodge(0.9)) + 
-  theme(legend.position = "bottom") + 
-  ggtitle("Replication of Finkelstein, Hendren and Shepard (2017)\nFigure 14") +
-  ylab("MVPF")  + xlab("")
+# df_mvpf_replication %>% 
+#   ggplot( aes(x = scenario,fill = s)) + 
+#   scale_x_discrete(limits = rev(levels(df_mvpf_replication$scenario ))) + 
+#   geom_col(data = df_mvpf_replication  %>% filter(iteration == 0), aes(y = mvpf),position = "dodge") + 
+#   ggthemes::theme_clean() + 
+#   geom_hline(aes(yintercept = 0.9),lty=2) + 
+#   geom_hline(aes(yintercept = 0.2),lty=2) +
+#   scale_y_continuous(limits = c(0,1.5), breaks = seq(0,1.5,0.25)) + 
+#   geom_text(data = df_mvpf_replication  %>% filter(iteration == 0),
+#             aes(y = mvpf+.08,label = round(mvpf,2)), position = position_dodge(0.9), family = "Gill Sans") + 
+#   theme(legend.position = "bottom") + 
+#   ggtitle("Replication of Finkelstein, Hendren and Shepard (2017)\nFigure 14") +
+#   ylab("MVPF")  + xlab("") + 
+#   theme(text = element_text(family = "Gill Sans"),
+#         plot.title = element_text(family = "Gill Sans", face = "plain"),
+#         plot.background = element_blank(), legend.title = element_blank())
 ```
 
-```{r}
+```{r ,eval = FALSE}
 get_params <-  function(x,params) {
   map2(params,x,~(
     .x(.y)
@@ -619,26 +631,26 @@ df_est <-
   mutate(label_baseline = paste0(" Modeled Estimate:\n $246/mo premium\n (MVPF = ",round(mvpf_baseline,3),")"))
 
 
-df_psa %>% 
-  ggplot(aes(x = mvpf_num, y = mvpf_denom)) +
-  geom_point(alpha = 0.1) + 
-  ggthemes::theme_clean() + 
-  scale_y_continuous(limits = c(0,4), breaks = seq(0,4,.25), name = "Cost") + 
-  scale_x_continuous(limits = c(0,4), breaks = seq(0,4,0.25), name = "Benefit") +
-  geom_abline(intercept = 0, slope = 1/.9, lty = 2)   +
-  #eom_rug(sides = "tr", length = unit(0.01,"npc"))  + 
-  geom_point(data = df_est, colour = "black", pch = 19) + 
-  geom_text(data = df_est, colour = "black",aes(label = label_reformed),hjust =0,vjust=1,size = 3,fontface="bold") +
-  geom_point(aes(x = mvpf_num_baseline, y = mvpf_denom_baseline), colour = "blue", alpha = 0.1) + 
-  geom_point(data = df_est, colour = "blue",aes(x = mvpf_num_baseline, y = mvpf_denom_baseline), pch = 19) + 
-  geom_text(data = df_est, colour = "blue",aes(x = mvpf_num_baseline, y = mvpf_denom_baseline,label = label_baseline),hjust =0,vjust=0,size = 3,fontface = "bold") + 
-  annotate("text",x = 3,y = 2.75,label = "Policies with\nFavorable MVPF",size = 3,hjust =0,vjust =0) +
-  annotate("text",y = 3.5,x = 2,label = "Policies with\nUnfavorable MVPF",size = 3,hjust = 0, vjust =0)  +
-  ggtitle("Modeled MVPF Estimates for a $246/mo and $36/mo\nSubsidized Premium With\nProbabilistic Sensitivity Analysis Results")
+# df_psa %>% 
+#   ggplot(aes(x = mvpf_num, y = mvpf_denom)) +
+#   geom_point(alpha = 0.1) + 
+#   ggthemes::theme_clean() + 
+#   scale_y_continuous(limits = c(0,4), breaks = seq(0,4,.25), name = "Cost") + 
+#   scale_x_continuous(limits = c(0,4), breaks = seq(0,4,0.25), name = "Benefit") +
+#   geom_abline(intercept = 0, slope = 1/.9, lty = 2)   +
+#   #eom_rug(sides = "tr", length = unit(0.01,"npc"))  + 
+#   geom_point(data = df_est, colour = "black", pch = 19) + 
+#   geom_text(data = df_est, colour = "black",aes(label = label_reformed),hjust =0,vjust=1,size = 3,fontface="bold") +
+#   geom_point(aes(x = mvpf_num_baseline, y = mvpf_denom_baseline), colour = "blue", alpha = 0.1) + 
+#   geom_point(data = df_est, colour = "blue",aes(x = mvpf_num_baseline, y = mvpf_denom_baseline), pch = 19) + 
+#   geom_text(data = df_est, colour = "blue",aes(x = mvpf_num_baseline, y = mvpf_denom_baseline,label = label_baseline),hjust =0,vjust=0,size = 3,fontface = "bold") + 
+#   annotate("text",x = 3,y = 2.75,label = "Policies with\nFavorable MVPF",size = 3,hjust =0,vjust =0) +
+#   annotate("text",y = 3.5,x = 2,label = "Policies with\nUnfavorable MVPF",size = 3,hjust = 0, vjust =0)  +
+#   ggtitle("Modeled MVPF Estimates for a $246/mo and $36/mo\nSubsidized Premium With\nProbabilistic Sensitivity Analysis Results")
 
 ```
 
-```{r, eval = TRUE}
+```{r, eval = FALSE}
 TwoWaySA<-function(indata,outcome="NHB",parm1,parm2,range1,range2,lambda){
   
   # Get Outcome
@@ -819,31 +831,31 @@ OneWaySA<-function(indata,outcome="NHB",lambda,parm,range){
   plotdata$parm<-plotdata[,parm];
   library(directlabels)
   txtsize<-12 #Text size for the graphs
-  ggplot(data = plotdata, aes(x = parm, y = values, lty = ind)) +
-    geom_line() +
-    ggtitle("One-way sensitivity analysis \n Net Health Benefit") + 
-    xlab(parm) +
-    ylab("E[NHB]") +
-    scale_colour_hue("Strategy", l=50) +
-    #scale_x_continuous(breaks=number_ticks(6)) + #Adjust for number of ticks in x axis
-    #scale_y_continuous(breaks=number_ticks(6)) +
-    theme_bw() +
-    theme(legend.position="bottom",legend.title=element_text(size = txtsize),
-          legend.key = element_rect(colour = "black"),
-          legend.text = element_text(size = txtsize),
-          title = element_text(face="bold", size=15),
-          axis.title.x = element_text(face="bold", size=txtsize),
-          axis.title.y = element_text(face="bold", size=txtsize),
-          axis.text.y = element_text(size=txtsize),
-          axis.text.x = element_text(size=txtsize))+
-    geom_dl(aes(label = ind), method = list(dl.combine("last.bumpup"), cex = 0.8))
-}
+#   ggplot(data = plotdata, aes(x = parm, y = values, lty = ind)) +
+#     geom_line() +
+#     ggtitle("One-way sensitivity analysis \n Net Health Benefit") +
+#     xlab(parm) +
+#     ylab("E[NHB]") +
+#     scale_colour_hue("Strategy", l=50) +
+#     #scale_x_continuous(breaks=number_ticks(6)) + #Adjust for number of ticks in x axis
+#     #scale_y_continuous(breaks=number_ticks(6)) +
+#     theme_bw() +
+#     theme(legend.position="bottom",legend.title=element_text(size = txtsize),
+#           legend.key = element_rect(colour = "black"),
+#           legend.text = element_text(size = txtsize),
+#           title = element_text(face="bold", size=15),
+#           axis.title.x = element_text(face="bold", size=txtsize),
+#           axis.title.y = element_text(face="bold", size=txtsize),
+#           axis.text.y = element_text(size=txtsize),
+#           axis.text.x = element_text(size=txtsize))+
+#     geom_dl(aes(label = ind), method = list(dl.combine("last.bumpup"), cex = 0.8))
+# }
 
 
 ```
 
 
-```{r, eval = TRUE}
+```{r, eval = FALSE}
 df_psa_params <- 
   params_halton_final %>% 
   map(~(data.frame(.x) %>% 
@@ -876,7 +888,7 @@ range2<-c(0.5,1)
 
 ```
 
-```{r}
+```{r, eval = FALSE}
 library(patchwork)
 p1 <- OneWaySA(indata = df_psa_full, outcome = "NHB", parm = parm1, range = range1, lambda = 1/.9) + 
   ggtitle("One Way Sensitivity Analysis:\nGovernment Incidence of Uncompensated Care\nMVPF Benchmark = 0.9") + 
@@ -892,7 +904,7 @@ p1 + p2
 
 ```
 
-```{r}
+```{r, eval = FALSE}
 TwoWaySA(indata=df_psa_full,outcome="NHB",parm1,parm2,range1,range2,lambda = 1/.9) +
   ggthemes::theme_tufte() + 
   scale_fill_manual(values = c("black","white","grey")) + 
@@ -902,7 +914,7 @@ TwoWaySA(indata=df_psa_full,outcome="NHB",parm1,parm2,range1,range2,lambda = 1/.
 ```
 
 
-```{r}
+```{r, eval = FALSE}
 CEAC<-function(lambda_range,indata){
   # Get Outcome
   lhs <- indata %>% select(contains("dQALY"),contains("dCOST")) %>% 
@@ -993,7 +1005,7 @@ CEAC(indata=df_psa_full,lambda_range=lambda_range) +
 
 ```
 
-```{r}
+```{r, eval = FALSE}
 TornadoDiag <- function(indata,outcome,lambda) { 
   # Get Outcome
   lhs <- indata %>% select(psa_id,contains("dQALY"),contains("dCOST")) %>% 
@@ -1128,7 +1140,7 @@ TornadoDiag(indata = df_psa_full %>% select(-contains("NOSUBSIDY")), outcome = "
 ```
 
 
-```{r}
+```{r, eval = FALSE}
 
 predict.ga <- function(object, n, n0, verbose = T){
   #### Function to compute the preposterior for each of the 
@@ -1267,7 +1279,7 @@ Predict.matrix.tensor.smooth.ga <- function (object,
 }
 ```
 
-```{r}
+```{r, eval = FALSE}
 indata <- df_psa_full %>% select(-contains("LOWSUBSIDY"))
 
 evppi.res <- list()
