--- a/R/03_simulate-subsidy-and-medicaid.Rmd
+++ b/R/03_simulate-subsidy-and-medicaid.Rmd
@@ -12,6 +12,10 @@ knitr::opts_chunk$set(cache = TRUE)
 ```
 
 ```{r}
+# Math characters in ggplot
+# https://rstudio-pubs-static.s3.amazonaws.com/136237_170402e5f0b54561bf7605bdea98267a.html
+# https://en.wikibooks.org/wiki/Unicode/Character_reference/0000-0FFF
+
 suppressWarnings(suppressMessages(source(here::here("./R/manifest.R"))))
 
 results <- 
@@ -74,6 +78,53 @@ df_uncert_wtp_and_costs_data <- read_rds(here("./output/demand-estimates/02_wtp-
 params <- 
   c(p,R,DD)
 
+## Tables for Publication
+
+
+  R <-  params[grep("^R_",names(params))] %>% unlist() %>% 
+    data.frame() %>% 
+    rownames_to_column(var = "type") %>% 
+    separate(type,into= c("exa","exp"), sep ="_TO_") %>% 
+    set_names(c("exa","exp","value")) %>% 
+    spread(exp,value) %>% 
+    select(-exa) %>% 
+    as.matrix()
+  
+  DD <-  params[grep("^DD_",names(params))] %>% unlist() %>% 
+    data.frame() %>% 
+    rownames_to_column(var = "type") %>% 
+    separate(type,into= c("exa","exp"), sep ="_TO_") %>% 
+    set_names(c("exa","exp","value")) %>% 
+    spread(exp,value) %>% 
+    select(-exa) %>% 
+    as.matrix()
+  
+    
+  R %>% 
+  tbl_df() %>% 
+  set_names(c("Employer","Non-Group","Public","Uninsured")) %>% 
+  mutate(ex_ante = c("Employer","Non-Group","Public","Uninsured")) %>% 
+  select(ex_ante, everything()) %>% 
+  gt() %>% 
+  fmt_number(
+    columns = 2:5,
+    decimals = 3
+  ) %>% 
+  gtsave(here("./figures/99_coverage-transitions-matrix.png"))
+  
+  
+  DD %>% 
+  tbl_df() %>% 
+  set_names(c("Employer","Non-Group","Public","Uninsured")) %>% 
+  mutate(ex_ante = c("Employer","Non-Group","Public","Uninsured")) %>% 
+  select(ex_ante, everything()) %>% 
+  gt() %>% 
+  fmt_number(
+    columns = 2:5,
+    decimals = 3
+  ) %>% 
+  gtsave(here("./figures/99_medicaid-transitions-DD.png"))
+  
 #####################
 # MEDICAID
 #####################
@@ -83,7 +134,10 @@ params$OOP_Cx <- 569 # OOP spending among control compliers
 params$OOP_Tx <- 0 # OOP spending among treatment compliers
 params$sigma <- 3 # Coefficient of absolute risk aversion (needed only if we model I later)
 params$I <- 760 # pure insurance component -- note this can be further estimated.
-params$gov_incidence = 0.5
+params$gov_incidence = 1
+params$fudge <-0
+params$v_i <- 0.65
+params$v_j <- 1.15
 
 
 ###########
@@ -94,7 +148,8 @@ params$plan_type = "H"
 params$uninsured_oop_share = params$OOP_Cx / params$G_Cx
 params$phi = 0.25
 params$eta = 0.5
-params$plan_premium = 36
+params$plan_premium = 25
+params$welfare_weight = 0.5
 
 # Parameters that are functions of other parameters
 params$takeup_coef = get_takeup_coef(params = params)
@@ -103,48 +158,37 @@ params$cost_coef = get_cost_coef(params = params)
 subsidy_test <- simulate_subsidy(params)
 medicaid_test <- calculate_wtp_public(params)
 
-cov_sim(params)
+#cov_sim(params)
 ```
 
 ```{r}
 
+
+dist_lut <- c("qnorm" = "Normal",
+              "qunif" = "Uniform",
+              "qnorm01" = "Normal")
+
+
 params_lut <- 
   c("G" = "Average cost to the government per Medicaid recipient",
     "G_Cx" = "Medicaid spending among control compliers",
+    "C_H" = "Cost of marginal enrollee in private plan",
     "OOP_Cx" = "OOP spending among control compliers",
     "OOP_Tx" = "OOP spending among treatment compliers",
     "sigma" = "Coefficient of absolute risk aversion (NOT CURRENTLY USED)",
-    "I" = "Pure insurance component (gamma - T)",
+    "I" = "Pure insurance value of Medicaid",
     "gov_incidence" = "Government incidence of uncompensated care",
     "pop_fpl" = "FPL of recipients",
     "uninsured_oop_share" = "Out-of-pocket share of expenditures among uninsured",
     "phi" = "Moral hazard effect of insurance",
     "eta" = "Social welfare weight",
     "plan_premium" = "Subsidized monthly premium",
-    "subsidy_takeup" = "Subsidy take-up")
+    "subsidy_takeup" = "Subsidy take-up",
+    "v_i" = "Welfare weight for targeted income group",
+    "v_j" = "Welfare weight for high-income group",
+    "takeup" = "Fraction taking up subsidized coverage")
 
-tbl <- 
-  params %>% unlist() %>% data.frame() %>% 
-  rownames_to_column() %>% 
-  filter(rowname %in% names(params_lut)) %>% 
-  mutate(desc = as.character(params_lut[rowname])) %>% 
-  select(3,1,2) %>% 
-  mutate_at(vars(3),function(x) as.numeric(paste0(x))) %>% 
-  mutate_at(vars(3),function(x) ifelse(x>1000,x/1000,ifelse(x<=1,round(x,3), round(x,1)))) %>% 
-  #mutate(desc = gsub("$","\\$",desc)) %>% 
-  set_colnames(c("Parameter Description","Short Name","Value")) #%>% 
-  #tangram(., as.character=TRUE, style="lancet", caption="Model Parameters",id = "params")
-
-tbl %>% 
-  gt(rowname_col = "Parameter Description") %>% 
-  tab_header(
-    title = "Model Parameters"
-  ) %>% 
-  tab_options(
-    table.width = pct(75)
-  ) 
 ```
-
 
 ```{r}
 # Get estimate of takeup uncertainty (SD of RI sampling distribution)
@@ -215,25 +259,93 @@ tbl %>%
 
 
 ```{r}
+
+qnorm01 <- function(x,...) pmax(0,pmin(1,qnorm(p = x,...)))
 ### Probabilistic Sensitivity Analysis
+params_psa_vals <- 
+  
 params_psa <- params
 params_psa$gov_incidence = function(x) qunif(p = x, min = 0, max = 1) # Incidence on Government
-params_psa$eta = function(x) qunif(p = x, min =0.5, max = 1) # Social Welfare Weight
+params_psa$eta = function(x) qunif(p = x, min =0.5, max = 1) # Marginal utility of 
+params_psa$v_i = function(x) qnorm(p = x, mean = params$v_i,sd = 0.02) # Welfare Weightfor targeted group
+params_psa$v_j = function(x) qnorm(p = x, mean = params$v_j,sd = 0.02) # Social Welfare for high-income group
 params_psa$phi = function(x) qnorm(p = x, mean = 0.25,sd = 0.05) # Moral Hazard Effects of Insurance
-params_psa$uninsured_oop_share =  function(x) pmax(0,pmin(1,qnorm(p = x, mean = 0.2,sd = 0.1))) # Share OOP for Uninsured
-
+params_psa$uninsured_oop_share =  function(x) qnorm(p = x, mean = 0.2, sd = 0.1) #function(x) pmax(0,pmin(1,qnorm(p = x, mean = 0.2,sd = 0.1))) # Share OOP for Uninsured
 params_psa$G_Cx =  function(x) qnorm(p = x, mean = params$G_Cx, sd = 20) # Medicaid Spending among control compliers
 params_psa$G = function(x) qnorm(p = x, mean = params$G, sd = 20) # Medicaid spending among treatment compliers
 params_psa$OOP_Cx = function(x) qnorm(p = x, mean = params$OOP_Cx, sd = 50)  # OOP spending among control compliers
 params_psa$OOP_Tx = function(x) qnorm(p = x, mean = params$OOP_Tx, sd = 0) # OOP spending among treatment compliers
 params_psa$sigma = function(x) qnorm(p = x, mean =  params$sigma, sd = 0) # Coefficient of absolute risk aversion (needed only if we model I later)
-params_psa$I = function(x) qnorm(p = x, mean =  params$I, sd = 100) # pure insurance component -- note this can be further estimated.
+params_psa$I = function(x) qnorm(p = x, mean =  params$I, sd = 200) # pure insurance component -- note this can be further estimated.
+params_psa$fudge = function(x) qnorm(p = x, mean =  params$fudge, sd = 0) # pure insurance component -- note this can be further estimated.
 params_psa$gov_incidence = function(x) qunif(p = x, min = 0, max = 1)
 #params_psa$welf_weight = function(x) qunif(p = x, min = 0, max = 1)
     
 # Only use Halton draws for PSA parameters that aren't fixed.
 which_are_fns <- params_psa %>% map_lgl(~is.function(.x)) 
 
+```
+
+```{r}
+get_psa_values <- function(x) {
+
+  foo <- deparse(x)
+  parameter_name <- str_split(gsub("list\\(","",foo[1])," = ")[[1]][1]
+  dist = dist_lut[str_split(foo[2],"\\(")[[1]][1]]
+  
+    gsub(" ","",str_split(str_split(foo[2],"\\(|\\)")[[1]][2],",")[[1]]) %>% data.frame() %>% 
+    set_names("parameter") %>% 
+    separate(parameter,"=",into = c("parameter","value")) %>% 
+    mutate(from_params_list = as.integer(grepl("params",value))) %>% 
+    mutate(value = gsub("params\\$","",value))  %>% 
+    mutate(rowname = parameter_name) %>% 
+    filter(value != "x")  %>% 
+    mutate(value = ifelse(from_params_list==1,params[value],value)) %>% 
+    select(rowname,parameter,value) %>% 
+    spread(parameter,value) %>% 
+      mutate(distribution = dist) %>% 
+    select(-rowname) %>% 
+      select(distribution,everything()) %>% 
+      tbl_df() %>% 
+      mutate_at(vars(-distribution),list(~paste0(unlist(.))))
+}
+
+
+psa_values <- 
+  params_psa[which_are_fns] %>% 
+  map(~(
+  get_psa_values(.x)
+))  %>% bind_rows(.id = "rowname")
+
+tbl <- 
+  params %>% unlist() %>% data.frame() %>% 
+  rownames_to_column() %>% 
+  filter(rowname %in% names(params_lut)) %>% 
+  mutate(desc = as.character(params_lut[rowname])) %>% 
+  select(3,1,2) %>% 
+  left_join(psa_values,c("rowname")) %>% 
+  mutate_at(vars(3),function(x) as.numeric(paste0(x))) %>% 
+  mutate_at(vars(3),function(x) ifelse(x>1000,x/1000,ifelse(x<=1,round(x,3), round(x,1)))) #%>% 
+  #mutate(desc = gsub("$","\\$",desc)) %>% 
+  #set_colnames(c("Parameter Description","Short Name","Value")) 
+  #tangram(., as.character=TRUE, style="lancet", caption="Model Parameters",id = "params")
+
+p_tbl <- 
+tbl %>% 
+  gt(rowname_col = "Parameter Description") %>% 
+  tab_header(
+    title = "Model Parameters"
+  ) %>% 
+  tab_options(
+    table.width = pct(75)
+  ) 
+p_tbl 
+gtsave(p_tbl, filename = here("./figures/03_simulate-subsidy-baseline-parameters.png"))
+```
+
+
+
+```{r}
 # Raw halton draw
 draws <- randtoolbox::halton(n = 1e3, dim = length(params_psa[which_are_fns])) %>% as.matrix()
 
@@ -302,25 +414,52 @@ df_est_medicaid <-
 ```
 
 ```{r}
-df_psa %>%
+lambda_lut <- c("lambda_1" = "\u3bB = 0.2",
+                "lambda_2" = "\u3bB = 0.9",
+                "lambda_3" = "\u3bB = 1.2")
+
+
+
+df_lambda <- 
+  data.frame(
+    mvpf_num = seq(0,4,.1)
+  ) %>% 
+  mutate(lambda_1 = 0.2,
+         lambda_2 = 0.9,
+         lambda_3 = 1.2) %>% 
+  gather(lambda,value,-mvpf_num) %>% 
+    mutate(lambda = lambda_lut[lambda]) %>% 
+  mutate(mvpf_denom = mvpf_num * 1 / value) %>% 
+  filter(mvpf_denom<4)
+
+p_tmp <- 
+  df_psa %>%
   ggplot(aes(x = mvpf_num, y = mvpf_denom)) +
-  geom_point(alpha = 0.05) +
+  geom_line(data = df_lambda, aes(lty = lambda)) +
+  geom_dl(data = df_lambda, aes(label = lambda), method = list("angled.boxes", cex =0.9)) +
+  geom_point(alpha = 0.05,pch = 19) +
   ggthemes::theme_clean() +
   scale_y_continuous(limits = c(0,4), breaks = seq(0,4,.25), name = "Cost") +
   scale_x_continuous(limits = c(0,4), breaks = seq(0,4,0.25), name = "Benefit") +
-  geom_abline(intercept = 0, slope = 1 / .9, lty = 2)   +
+  #geom_abline(intercept = 0, slope = 1 / .9, lty = 2)   +
+  #geom_abline(intercept = 0, slope = 1 / .2, lty = 3)   +
   #eom_rug(sides = "tr", length = unit(0.01,"npc"))  +
   geom_point(data = df_est, colour = "black", pch = 19) +
   geom_text(data = df_est, colour = "black",aes(label = label_reformed),hjust =0,vjust=1,size = 3,fontface="italic",family = "Gill Sans") +
-  annotate("text",x = 3,y = 2.75,label = "Policies with\nFavorable MVPF (>0.9)",size = 3,hjust =0,vjust =0) +
-  annotate("text",y = 3.5,x = 2,label = "Policies with\nUnfavorable MVPF (<0.9)",size = 3,hjust = 0, vjust =0)  +
-  ggtitle(paste0("Cost and Benefit Estimates (M=1,000)")) +
+  #annotate("text",x = 3,y = 2.75,label = "Policies with\nFavorable MVPF (>0.9)",size = 2,hjust =0,vjust =0) +
+  #annotate("text",y = 3.5,x = 2,label = "Policies with\nUnfavorable MVPF (<0.9)",size = 2,hjust = 0, vjust =0)  +
+  #ggtitle(paste0("Cost and Benefit Estimates (M=1,000)")) +
   theme(text = element_text(family = "Gill Sans"),
         plot.title = element_text(family = "Gill Sans", face = "plain"),
-        plot.background = element_blank()) +
-  geom_point(data = df_psa_medicaid,colour = "red", alpha = 0.05) + 
-  geom_point(data = df_est_medicaid, colour = "red") +
-  geom_text(data = df_est_medicaid, colour = "red",aes(label = label_reformed),hjust =0,vjust=1,size = 3,fontface="italic",family = "Gill Sans") 
+        plot.background = element_blank(),
+        legend.position = "none") +
+  geom_point(data = df_psa_medicaid,colour = "blue", alpha = 0.05, pch = 2) + 
+  geom_point(data = df_est_medicaid, colour = "blue", pch = 2) +
+  geom_text(data = df_est_medicaid, colour = "blue",aes(label = label_reformed),hjust =1,vjust=0,size = 3,fontface="italic",family = "Gill Sans")
+
+
+p_tmp 
+p_tmp %>% ggsave(filename = here("./figures/03_cost-and-benefit-estimates.png"),height = 6, width = 6, units = "in")
 ```
 
 
@@ -339,7 +478,7 @@ df_psa_full <-
   df_psa %>% tbl_df() %>% 
     mutate(dQALY_SUBSIDY = mvpf_num, 
            dCOST_SUBSIDY = mvpf_denom) %>% 
-    select(iteration,starts_with("dQALY"),starts_with("dCOST"),takeup) %>% 
+    select(iteration,starts_with("dQALY"),starts_with("dCOST"),takeup,C_H) %>% 
   # Medicaid
   left_join(
     df_psa_medicaid %>% tbl_df() %>% 
@@ -365,17 +504,19 @@ range2<-c(0,1)
 
 ```{r}
 
-p1 <- OneWaySA(indata = df_psa_full %>% select(-contains("SDDUBSIDY")), outcome = "NHB", parm = parm1, range = range1, lambda = .9) + 
-  ggtitle("One Way Sensitivity Analysis:\nGovernment Incidence of Uncompensated Care\nMVPF Benchmark = 0.9") + 
+p1 <- OneWaySA(indata = df_psa_full %>% select(-contains("SDDUBSIDY")), outcome = "NHB", parm = parm1, range = range1, lambda = 1) + 
+  #ggtitle("One Way Sensitivity Analysis:\nGovernment Incidence of Uncompensated Care\nMVPF Benchmark = 0.9") + 
   theme(legend.position = "none") +
  xlim(c(0,1.3))  + ylab("E[NWB]") + ylim(c(-1,2)) +
-  theme(plot.title = element_text(family = "Gill Sans",face = "plain")) + 
+  #theme(plot.title = element_text(family = "Gill Sans",face = "plain")) + 
+  theme(plot.title = element_blank()) + 
   theme_tufte_revised() + 
   theme(legend.position = "none", text = element_text(family = "Gill Sans"))+ 
   scale_x_continuous(limits = c(0,1.3), breaks = seq(0,1,0.2))
+p1 %>% ggsave(filename = here("./figures/03_one-way-sensitivity_gov-incidence_lambda90.png"))
 
 p2 <- OneWaySA(indata = df_psa_full  %>% select(-contains("SUBSDDDIDY")), outcome = "NHB", parm = parm1, range = range1, lambda = .2) + 
-  ggtitle("One Way Sensitivity Analysis:\nGovernment Incidence of Uncompensated Care\nMVPF Benchmark = 0.2") + 
+  #ggtitle("One Way Sensitivity Analysis:\nGovernment Incidence of Uncompensated Care\nMVPF Benchmark = 0.2") + 
   theme(legend.position = "none") +
  xlim(c(0,1.3))  + ylab("E[NWB]") + ylim(c(-1,2)) +
   theme(plot.title = element_text(family = "Gill Sans",face = "plain")) + 
@@ -383,39 +524,80 @@ p2 <- OneWaySA(indata = df_psa_full  %>% select(-contains("SUBSDDDIDY")), outcom
   theme(legend.position = "none", text = element_text(family = "Gill Sans")) + 
   scale_x_continuous(limits = c(0,1.3), breaks = seq(0,1,0.2))
 
-p1 
-p2
+p2 %>% ggsave(filename = here("./figures/03_one-way-sensitivity_gov-incidence_lambda20.png"))
+
+p1  + ggtitle("One Way Sensitivity Analysis:\nGovernment Incidence of Uncompensated Care\nMVPF Benchmark = 0.9")
+p2 + ggtitle("One Way Sensitivity Analysis:\nGovernment Incidence of Uncompensated Care\nMVPF Benchmark = 0.2")
 ```
 
 ```{r}
 
-#cat("test")
-# TwoWaySA(indata=df_psa_full,outcome="NHB",parm1,parm2,range1,range2,lambda = 1.2) +
-#   ggthemes::theme_tufte() + 
-#   scale_fill_manual(values = c("black","grey")) + 
-#   ggtitle("Two-Way Sensitivity Analysis:\nGovernment Incidence of Uncompensated Care\nIncidence on Affluent (eta = 0.5) vs. \nLow-Income (eta = 1)\nMVPF Benchmark = 0.9")  +
-#   ggthemes::theme_clean()
+parm1<-'gov_incidence'
+parm2<-'I'
+range1<-c(0,1)
+range2<-c(100,1250)
 
+#cat("test")
+p1 <- 
+  TwoWaySA(indata=df_psa_full,outcome="NHB",parm1,parm2,range1,range2,lambda = 0.6) +
+  ggthemes::theme_tufte() +
+  scale_fill_manual(values = c("black","lightgrey","darkgrey")) +
+  #ggtitle("Two-Way Sensitivity Analysis:\nGovernment Incidence of Uncompensated Care\nIncidence on Affluent (eta = 0.5) vs. \nLow-Income (eta = 1)\nMVPF Benchmark = 0.9")  +
+  ggthemes::theme_clean() +
+  ggtitle(paste0("\u3bB=0.6")) + 
+  xlab("Incidence of Uncompensated Care on Government (Share)") + 
+  ylab("Insurance Value of Medicaid")+ theme(legend.position = "bottom")
+
+p2 <- 
+  TwoWaySA(indata=df_psa_full,outcome="NHB",parm1,parm2,range1,range2,lambda = 0.9) +
+  ggthemes::theme_tufte() +
+  scale_fill_manual(values = c("black","lightgrey","darkgrey")) +
+  #ggtitle("Two-Way Sensitivity Analysis:\nGovernment Incidence of Uncompensated Care\nIncidence on Affluent (eta = 0.5) vs. \nLow-Income (eta = 1)\nMVPF Benchmark = 0.9")  +
+  ggthemes::theme_clean() +
+  ggtitle(paste0("\u3bB=0.9")) + 
+  xlab("Incidence of Uncompensated Care on Government (Share)") + 
+  ylab("Insurance Value of Medicaid") + theme(legend.position = "bottom")
+
+
+p3 <- 
+  TwoWaySA(indata=df_psa_full,outcome="NHB",parm1,parm2,range1,range2,lambda = 1.2) +
+  ggthemes::theme_tufte() +
+  scale_fill_manual(values = c("black","lightgrey","darkgrey")) +
+  #ggtitle("Two-Way Sensitivity Analysis:\nGovernment Incidence of Uncompensated Care\nIncidence on Affluent (eta = 0.5) vs. \nLow-Income (eta = 1)\nMVPF Benchmark = 0.9")  +
+  ggthemes::theme_clean() +
+  ggtitle(paste0("\u3bB=1.2")) + 
+  xlab("Incidence of Uncompensated Care on Government (Share)") + 
+  ylab("Insurance Value of Medicaid")+ theme(legend.position = "bottom")
+
+p4 <- p1 + p2 + p3
+
+p4 %>% ggsave(filename = here("./figures/03_two-sensitivity_value-medicaid_gov-incidence.png"))
+p4
 ```
 
 ```{r}
 lambda_range <- seq(0.0,1.5,0.05)
-CEAC(indata=df_psa_full,lambda_range=lambda_range) + 
+p_ceac <- 
+  CEAC(indata=df_psa_full,lambda_range=lambda_range) + 
   ggthemes::theme_clean() + 
   scale_x_continuous(breaks = seq(0,2,0.1), limits = c(0,2)) + 
   theme(legend.position = "none") + 
-  ggtitle("Policy Acceptability Curve") + 
+  #ggtitle("Policy Acceptability Curve") + 
   ylab("Pr(Cost-Effective)") + 
   geom_vline(aes(xintercept = c(0.2)), lty=2) + 
-  annotate("text",x = 0.22, y = 0.25, label = "SWF\nBenchmark",hjust =0,size =2) +
+  annotate("text",x = 0.22, y = 1, label = "Social Welfare Function \n(\U3b4= 3) Benchmark",hjust =0,size =2) +
   geom_vline(aes(xintercept = c(0.88)), lty=2) + 
-  annotate("text",x = 0.86, y = 0.25, label = "EITC\nBenchmark",hjust =1,size = 2) +
+  annotate("text",x = 0.86, y = 1, label = "EITC\nBenchmark",hjust =1,size = 2) +
   scale_colour_brewer(palette = "Set1")+
   scale_colour_grey( start = 0, end = .5, na.value = "red") + 
    theme(plot.title = element_text(family = "Gill Sans",face = "plain")) + 
   theme_tufte_revised() + 
-  theme(legend.position = "none", text = element_text(family = "Gill Sans")) #+ 
+  theme(legend.position = "none", text = element_text(family = "Gill Sans")) +
+    xlab(expression("Policy Adoption Threshold [Benefit/Cost]" (lambda))) 
+  
   #scale_x_continuous(limits = c(0,1.3), breaks = seq(0,1,0.2))
+p_ceac + ggtitle("Policy Acceptability Frontier")
+p_ceac %>% ggsave(filename=here("./figures/03_policy-acceptability-frontier.png"), width = 6, height = 5, units = "in")
 ```
 
 
@@ -430,7 +612,7 @@ indata <- df_psa_full
 
 evppi.res <- list()
 
-for (lambda in seq(0.1,2,0.1)) {
+for (lambda in seq(0.2,1.5,0.1)) {
   # Get Outcome
   #cat(lambda)
   
@@ -513,8 +695,29 @@ for (lambda in seq(0.1,2,0.1)) {
     #cat("\n")
   }
 } 
+df_evppi <- evppi.res %>% bind_rows(.id = "lambda") %>% tbl_df() %>% 
+  mutate(paramter = paste0(parameter)) %>% 
+  group_by(parameter) %>% 
+  mutate(max_evppi = max(evppi)) %>% 
+  filter(max_evppi > 0.005) %>% 
+  ungroup()
 
-evppi.res %>% bind_rows(.id = "lambda") %>% 
+df_evppi_label <- 
+  df_evppi %>% 
+  select(parameter) %>% 
+  unique() %>% 
+  mutate(parameter = paste0(parameter)) %>% 
+  mutate(tmp = params_lut[parameter]) %>% 
+  mutate(label = paste0(parameter,": ",tmp))
+  
+library(RColorBrewer)
+myColors <- rep("black",nrow(df_evppi_label)) #brewer.pal(12,"Set3")
+names(myColors) <- df_evppi_label$parameter
+colScale <- scale_colour_manual(name = "",values = myColors, labels = df_evppi_label$label)
+#lineScale <- scale_linetype_manual(values = seq(1,nrow(df_evppi_label), labels = df_evppi_label$label))
+
+p_evppi <- 
+  df_evppi %>% 
   #filter(lambda>0.8 & lambda<1.2) %>% 
   ggplot(aes(x = lambda, y = evppi, group = parameter, colour = parameter)) + 
   geom_line() + 
@@ -523,10 +726,24 @@ evppi.res %>% bind_rows(.id = "lambda") %>%
   
   theme(legend.position = "none") +
   theme_tufte_revised() + #theme(legend.position = "none") + 
-  ylab("Expected Value of Perfect Information") + 
-  xlab("MVPF Benchmark") + 
+  ylab("Expected Value of Partial Perfect Information") + 
+     xlab(expression("Policy Adoption Threshold [Benefit/Cost]" (lambda)))  + 
   theme(text = element_text(family = "Gill Sans")) +
-  geom_dl(aes(label = parameter), method = list("top.bumpup",cex =0.9,fontfamily = "Gill Sans"))  +
-  ggtitle("Expected Value of Perfect Information by Parameter")
+  geom_dl(aes(label = parameter), method = list("top.bumpup",cex =0.9,fontfamily = "Gill Sans"))  + 
+  colScale + 
+  theme(legend.position = "bottom")
+  #ggtitle("Expected Value of Perfect Information by Parameter")
+p_evppi + ggtitle("Degree of Parameter Leverage in Affecting Policy Adoption,\nby MVPF Threshold Value")
+p_evppi %>% ggsave(filename = here("./figures/03_evppi.png"),height = 6, width = 12, units = "in")
+```
+
+
+```{r}
+p1 <- p_ceac + ggtitle("Policy Acceptability Frontier")
+p2 <- p_evppi + ggtitle("Degree of Parameter Leverage in Affecting Policy Adoption,\nby MVPF Threshold Value")
+
+p3 <- p1 + p2 + plot_layout(nrow=1)
+p3 %>% ggsave(filename = here("./figures/99_summary-of-results.png"),height = 6, width = 12, units = "in")
+
 ```
 
